// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={truthyExpression &&
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(2) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={truthyExpression &&
        "lorem ipsum dolor sit amet" !==
          "consectetur adipiscing elit proin ex massa hendrerit eu posuere" &&
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(3) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={truthyExpression &&
        (condition
          ? \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`)}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(4) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={falsyExpression ||
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(5) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={falsyExpression ||
        "lorem ipsum dolor sit amet" ===
          "consectetur adipiscing elit proin ex massa hendrerit eu posuere" ||
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(6) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={falsyExpression ||
        (condition
          ? \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`)}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(7) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={null ??
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(8) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={null ??
        void "lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere" ??
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(9) When expressions are joined by th…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={null ??
        (condition
          ? \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`)}
    >
      <slot />
    </div>
  </div>
</div>
"
`;
